[package]
name = "himage"
version = "0.1.0"
authors = ["Nguyen Hoang Nam <nguyenhoangnam.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
clap = "2.33"
block-modes = "0.8.1"
aes = "0.7.5"
